--- a/server/pom.xml
+++ b/server/pom.xml
@@ -27,6 +27,18 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>buildnumber-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>validate</phase>
+            <goals>
+              <goal>create</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
         <configuration>
@@ -34,6 +46,7 @@
           <archive>
             <manifestEntries>
               <Automatic-Module-Name>de_codesourcery_versiontracker_server</Automatic-Module-Name>
+              <git-SHA-1>${buildNumber}</git-SHA-1>
             </manifestEntries>
             <manifest>
               <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
