--- a/server/pom.xml
+++ b/server/pom.xml
@@ -42,7 +42,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
         <configuration>
-          <warName>versiontracker-${myclassifier}</warName>
+          <warName>versiontracker</warName>
           <archive>
             <manifestEntries>
               <Automatic-Module-Name>de_codesourcery_versiontracker_server</Automatic-Module-Name>
