--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,8 @@
   <artifactId>versiontracker-parent</artifactId>
   <version>1.0.14-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>versiontracker-parent</name>
+  <name>${project.groupId}:${project.artifactId}</name>
+  <description>Rule for maven-dependency-plugin that enforces dependencies are no more than X weeks/months/years older than their latest release.</description>
   <url>https://github.com/toby1984/maven-dependency-version-enforcer</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -16,6 +17,40 @@
     <enforcerrule.maven.version>3.8.4</enforcerrule.maven.version>
   </properties>
   <profiles>
+    <profile>
+      <id>release</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-enforcer-plugin</artifactId>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-source-plugin</artifactId>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+          </plugin>
+          <!-- explicitly define maven-deploy-plugin after other to force exec order -->
+          <plugin>
+            <artifactId>maven-deploy-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>deploy</id>
+                <phase>deploy</phase>
+                <goals><goal>deploy</goal></goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
     <profile>
       <id>jdk11</id>
       <activation>
@@ -82,27 +117,18 @@
     </profile>
   </profiles>
   <distributionManagement>
-    <repository>
-      <id>voipfuture-releases</id>
-      <uniqueVersion>false</uniqueVersion>
-      <name>voipfuture-releases</name>
-      <url>https://artifactory.voipfuture.com/artifactory/libs-release-local</url>
-    </repository>
     <snapshotRepository>
-      <id>voipfuture-snapshots</id>
-      <uniqueVersion>true</uniqueVersion>
-      <name>voipfuture-snapshots</name>
-      <url>https://artifactory.voipfuture.com/artifactory/libs-snapshot-local</url>
+      <id>maven-central-uploads</id>
+      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
     </snapshotRepository>
-    <site>
-      <id>dummy.website</id>
-      <name>Dummy Website</name>
-      <url>file:///tmp/cloudportal</url>
-    </site>
+    <repository>
+      <id>maven-central-uploads</id>
+      <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
   </distributionManagement>
   <scm>
+    <connection>scm:git:git@github.com:toby1984/maven-dependency-version-enforcer.git</connection>
     <developerConnection>scm:git:git@github.com:toby1984/maven-dependency-version-enforcer.git</developerConnection>
-    <tag>HEAD</tag>
   </scm>
   <licenses>
     <license>
@@ -118,6 +144,8 @@
       <name>Tobias Gierke</name>
       <email>tobias.gierke@code-sourcery.de</email>
       <timezone>Europe/Berlin</timezone>
+      <organization>private</organization>
+      <organizationUrl>https://github.com/toby1984</organizationUrl>
     </developer>
   </developers>
   <dependencyManagement>
@@ -248,17 +276,53 @@
   </dependencyManagement>
   <build>
     <pluginManagement>
+
       <plugins>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-gpg-plugin</artifactId>
+          <version>3.0.1</version>
+          <executions>
+            <execution>
+              <id>sign-artifacts</id>
+              <phase>verify</phase>
+              <goals>
+                <goal>sign</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>versions-maven-plugin</artifactId>
+            <version>2.11.0</version>
+        </plugin>
+
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>build-helper-maven-plugin</artifactId>
+            <version>3.0.0</version>
+        </plugin>
+
+        <plugin>
+            <artifactId>maven-release-plugin</artifactId>
+            <version>2.5.3</version>
+        </plugin>
+
         <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>buildnumber-maven-plugin</artifactId>
             <version>1.4</version>
         </plugin>
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-war-plugin</artifactId>
           <version>3.3.2</version>
         </plugin>
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
@@ -267,11 +331,13 @@
             <classifier>${myclassifier}</classifier>
           </configuration>
         </plugin>
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>3.0.0-M5</version>
+          <version>3.0.0-M7</version>
         </plugin>
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-source-plugin</artifactId>
@@ -279,12 +345,14 @@
           <executions>
             <execution>
               <id>attach-sources</id>
+              <phase>package</phase>
               <goals>
-                <goal>jar</goal>
+                <goal>jar-no-fork</goal>
               </goals>
             </execution>
           </executions>
         </plugin>
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
@@ -292,6 +360,15 @@
           <configuration>
             <doclint>none</doclint>
           </configuration>
+          <executions>
+            <execution>
+              <id>attach-javadocs</id>
+              <phase>package</phase>
+              <goals>
+                <goal>jar</goal>
+              </goals>
+            </execution>
+          </executions>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -317,7 +394,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.7</version>
+          <version>2.8.2</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -349,7 +426,7 @@
         <plugin>
           <groupId>com.mycila.maven-license-plugin</groupId>
           <artifactId>maven-license-plugin</artifactId>
-          <version>1.9.0</version>
+          <version>1.10.b1</version>
           <configuration>
             <header>${project.basedir}/../etc/license_header.txt</header>
             <quiet>false</quiet>
@@ -375,11 +452,11 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-enforcer-plugin</artifactId>
-          <version>3.0.0-M1</version>
+          <version>3.0.0-M3</version>
           <configuration>
             <rules>
               <requireMavenVersion>
-                <version>[3.5.2,)</version>
+                <version>[3.8.4,)</version>
               </requireMavenVersion>
               <requireJavaVersion>
                 <version>[1.8,)</version>
@@ -419,10 +496,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
