--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,10 +8,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 16
+      - name: Set up JDK 17
         uses: actions/setup-java@v1
         with:
-          java-version: 16
+          java-version: 17
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
@@ -21,4 +21,4 @@ jobs:
       - name: Build with Maven
         run: mvn -B clean test --file pom.xml
         env:
-          MAVEN_OPTS: --illegal-access=permit
+          MAVEN_OPTS: --add-opens java.base/java.lang=ALL-UNNAMED
