--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,20 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <wicket.version>7.10.0</wicket.version>
     <apache.tomcat.version>9.0.5</apache.tomcat.version>
-    <log4.version>2.17.1</log4.version>
+    <log4.version>2.17.2</log4.version>
+    <junit.version>5.9.0-M1</junit.version>
+
     <!-- properties specific to building the enforcer rule -->
     <enforcer.api.version>3.0.0</enforcer.api.version>
     <enforcerrule.maven.version>3.8.4</enforcerrule.maven.version>
+
+    <!-- JVM compiler and runtime options -->
+    <preview></preview>
+    <illegalAccess></illegalAccess>
+    <jdkModules></jdkModules>
+    <javac.compilation.options>${preview}</javac.compilation.options>
+    <java.runtime.options>${preview} ${jdkModules} ${illegalAccess} -Dfile.encoding=${project.build.sourceEncoding}</java.runtime.options>
+
   </properties>
   <profiles>
     <profile>
@@ -228,26 +238,51 @@
       </dependency>
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-jcl</artifactId>
-        <version>${log4.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-web</artifactId>
         <version>${log4.version}</version>
       </dependency>
+      <!-- JUnit5 & AssertJ -->
+
+      <dependency>
+        <groupId>org.easymock</groupId>
+        <artifactId>easymock</artifactId>
+        <version>4.3</version>
+        <scope>test</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>${junit.version}</version>
+        <scope>test</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>${junit.version}</version>
+        <scope>test</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter</artifactId>
+        <version>${junit.version}</version>
+        <scope>test</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.assertj</groupId>
+        <artifactId>assertj-core</artifactId>
+        <version>3.23.1</version>
+        <scope>test</scope>
+      </dependency>
+      <!-- -->
       <dependency>
         <groupId>commons-logging</groupId>
         <artifactId>commons-logging</artifactId>
         <version>1.2</version>
       </dependency>
-      <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>4.13.1</version>
-        <scope>test</scope>
-      </dependency>
-      <!-- other stuff -->
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
@@ -333,9 +368,26 @@
         </plugin>
 
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>3.0.0-M7</version>
+           <groupId>org.apache.maven.plugins</groupId>
+           <artifactId>maven-surefire-plugin</artifactId>
+           <version>3.0.0-M7</version>
+           <configuration>
+             <argLine>${java.runtime.options}</argLine>
+             <systemPropertyVariables>
+               <!-- special system property that is used by JUnit4 assumptions
+                    to disable certain multi-threaded tests that provoke race-conditions
+                    and spuriously fail inside virtualized environments
+               -->
+               <runningInsideVM>true</runningInsideVM>
+               <runningInsideJenkins>true</runningInsideJenkins>
+             </systemPropertyVariables>
+             <properties>
+               <configurationParameters>
+                 junit.jupiter.execution.parallel.enabled = true
+                 junit.jupiter.extensions.autodetection.enabled = true
+               </configurationParameters>
+             </properties>
+           </configuration>
         </plugin>
 
         <plugin>
@@ -421,6 +473,8 @@
             <target>${javac.target}</target>
             <release>${javac.release}</release>
             <encoding>UTF-8</encoding>
+            <compilerArgs>${javac.compilation.options}</compilerArgs>
+            <showWarnings>true</showWarnings>
           </configuration>
         </plugin>
         <plugin>
@@ -521,8 +575,28 @@
       <artifactId>log4j-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.easymock</groupId>
+      <artifactId>easymock</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
