--- a/example/pom.xml
+++ b/example/pom.xml
@@ -71,10 +71,9 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
         </configuration>
           <dependencies>
             <dependency>
-              <groupId>de.codesourcery.versiontracker</groupId>
+              <groupId>de.code-sourcery.versiontracker</groupId>
               <artifactId>versiontracker-enforcerrule</artifactId>
-              <version>0.0.7-SNAPSHOT</version>
-              <classifier>jdk10</classifier> <!-- obviously depends on your JDK version -->
+              <version>1.0.14</version>
             </dependency>
           </dependencies>
       </plugin>
