--- a/server/pom.xml
+++ b/server/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>de.codesourcery.versiontracker</groupId>
+    <groupId>de.code-sourcery.versiontracker</groupId>
     <artifactId>versiontracker-parent</artifactId>
     <version>1.0.14-SNAPSHOT</version>
   </parent>
@@ -11,9 +11,8 @@
   <packaging>war</packaging>
   <dependencies>
     <dependency>
-      <groupId>de.codesourcery.versiontracker</groupId>
+      <groupId>de.code-sourcery.versiontracker</groupId>
       <artifactId>versiontracker-common</artifactId>
-      <classifier>${myclassifier}</classifier>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -52,7 +51,22 @@
               <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
             </manifest>
           </archive>
+          <classifier>webapp</classifier>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+            <configuration>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>com.mycila.maven-license-plugin</groupId>
