--- a/client/pom.xml
+++ b/client/pom.xml
@@ -10,8 +10,8 @@
   <name>versiontracker-client</name>
   <dependencies>
     <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpclient</artifactId>
+      <groupId>org.apache.httpcomponents.client5</groupId>
+      <artifactId>httpclient5</artifactId>
     </dependency>
     <dependency>
       <groupId>de.code-sourcery.versiontracker</groupId>
