--- a/common/pom.xml
+++ b/common/pom.xml
@@ -14,8 +14,8 @@
         <artifactId>jackson-databind</artifactId>
       </dependency>
     <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpclient</artifactId>
+      <groupId>org.apache.httpcomponents.client5</groupId>
+      <artifactId>httpclient5</artifactId>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
