--- a/enforcerrule/pom.xml
+++ b/enforcerrule/pom.xml
@@ -24,6 +24,10 @@
       <artifactId>activation</artifactId>
     </dependency>
     <dependency>
+      <groupId>javax.inject</groupId>
+      <artifactId>javax.inject</artifactId>
+    </dependency>
+    <dependency>
       <groupId>javax.xml.bind</groupId>
       <artifactId>jaxb-api</artifactId>
     </dependency>
