--- a/example/pom.xml
+++ b/example/pom.xml
@@ -6,8 +6,8 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
   <version>0.0.1-SNAPSHOT</version>
 
   <properties>
-    <enforcer.plugin.version>3.0.0-M1</enforcer.plugin.version>
-    <log4.version>2.17.1</log4.version>
+    <enforcer.plugin.version>3.4.1</enforcer.plugin.version>
+    <log4.version>2.23.1</log4.version>
   </properties>
 
   <dependencies>
@@ -59,7 +59,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
         </executions>
         <configuration>
           <rules>
-            <dependencyAgeRule implementation="de.codesourcery.versiontracker.enforcerrule.DependencyAgeRule">
+            <dependencyAgeRule>
               <!-- <apiEndpoint>http://localhost:8080/versiontracker-server/test</apiEndpoint> -->
               <warnAge>4d</warnAge>
               <maxAge>2m</maxAge>
