--- a/pom.xml
+++ b/pom.xml
@@ -130,9 +130,28 @@
       </dependency>
       <!-- dependencies used by sub-modules-->
       <dependency>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-enforcer-plugin</artifactId>
+        <version>${enforcer.api.version}</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
         <groupId>javax.inject</groupId>
         <artifactId>javax.inject</artifactId>
         <version>1</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>javax.annotation</groupId>
+        <artifactId>javax.annotation-api</artifactId>
+        <version>1.3.2</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.eclipse.sisu</groupId>
+        <artifactId>org.eclipse.sisu.plexus</artifactId>
+        <version>0.9.0.M2</version>
+        <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>javax.activation</groupId>
