--- a/enforcerrule/pom.xml
+++ b/enforcerrule/pom.xml
@@ -3,10 +3,10 @@
   <parent>
     <groupId>de.code-sourcery.versiontracker</groupId>
     <artifactId>versiontracker-parent</artifactId>
-    <version>1.0.23</version>
+    <version>1.0.24-SNAPSHOT</version>
   </parent>
   <artifactId>versiontracker-enforcerrule</artifactId>
-  <version>1.0.23</version>
+  <version>1.0.24-SNAPSHOT</version>
   <name>versiontracker-enforcerrule</name>
   <dependencies>
     <dependency>
